# llm-protection-system

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  __init__.py  build.py  build_docker.sh  build_linux.sh  build_macos.sh  build_windows.bat  check_docs.py  check_packages.py  create_dmg.sh  current_requirements.txt  docker-compose.yml  macos.spec  pyinstaller.spec  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_firewall.py  test_macos_package.sh  test_results_llama2_latest_20250421_100531.json  test_results_llama2_latest_20250421_102049.json  test_results_llama2_latest_20250421_102330.json  test_results_llama2_latest_20250421_102817.json  test_results_llama2_latest_20250421_103446.json  test_results_llama2_latest_20250421_103812.json  test_results_llama2_latest_20250421_104025.json  test_results_llama2_latest_20250421_104200.json  test_results_llama2_latest_20250421_104428.json  test_results_llama2_latest_20250421_105211.json  test_results_llama2_latest_20250421_105439.json  test_results_llama2_latest_20250421_105653.json  test_results_llama2_latest_20250421_110018.json  test_results_llama2_latest_20250421_110236.json  (+19 more)
docs/: api_documentation.md  api_security_implementation.md  api_security_test_plan.md  development_plan.md  development_status.md  docker_hub_release_guide.md  firewall_improvement_plan.md  firewall_user_guide.md  firewall_validation_plan.md  firewall_validation_report.md  github_release_template.md  installation_guide.md  llm_protection_system_architecture.md  macos_platform_test_plan.md  (+18 more)
(+109 files in other folders)
